Check skill costs before the cast and cancel it when they cannot be paid (#176)
Costs are now checked when the use skill packet arrives and paid when the cast ends, the way retail splits them, so a cast nobody can afford never starts and one which fails at the end is cancelled instead of being dropped silently, which left the client displaying the cast bar of a skill that had already failed until the player moved.

Fixed the end conditions, whose result was evaluated and then discarded, so a skill fired even when its mp or hp cost could not be paid. Both conditions also re-read the already reduced value and therefore reported failure after every successful payment, and mp compared with greater instead of greater or equal. Npcs stay exempt from mp costs, since no npc template carries mp at all, and an hp cost they cannot afford drains them to 1 hp instead of killing them, which is how the elemental self destruct skills work. That floor lives in reduceHp, under the same lock which applies the value, so nothing paid concurrently can push the caster below it.

Dp is read once and the remainder is written back from that read, since setDp has no lower bound and would happily store a negative value if the amount were re-read after the check.

Item costs can now be required without being consumed, which is what component_expendable 2 means in the client skill data.

Costs are checked once more when the cast ends, before anything is paid, so a cast which lost one of them meanwhile is cancelled without consuming the others, and the hp and mp use actions now compare the way their conditions do, hp never lethally and mp with greater or equal.