@@ -94,7 +94,8 @@ public abstract class CreatureLifeStats<T extends Creature> {
 				return 0;
 
 			previousHp = currentHp;
-			currentHp = newHp = Math.min(currentHp, Math.max(currentHp - value, 0));
+			int minHp = type == TYPE.USED_HP ? 1 : 0; // a skill cost drains its caster down to 1 hp, it never kills him
+			currentHp = newHp = Math.clamp(currentHp - value, minHp, currentHp);
 			if (isDead()) {
 				currentMp = 0;
 				unsetIsAboutToDie();
